# cb_monitor

./: .env.example  .gitignore  README.md  agents.md  pyproject.toml
src/cb_monitor/: __init__.py  __main__.py  cli.py  config.py  cookies.py  errors.py  followed.py  http_client.py  logging.py  models.py  player.py  playlist.py  room.py
tests/: test_config.py  test_cookies.py  test_followed.py  test_http_client.py  test_playlist.py  test_room.py
