[project]
name = "cb-monitor"
version = "0.1.0"
description = "A minimal async CLI monitor for followed Chaturbate live streams."
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "CB Monitor" }]
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.8.0",
    "python-dotenv>=1.0.1",
    "questionary>=2.1.0",
    "tenacity>=9.0.0",
]

[project.scripts]
cb_monitor = "cb_monitor.cli:main"

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
    "ruff>=0.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cb_monitor"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ASYNC",
    "B",
    "C4",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "F",
    "FA",
    "FBT",
    "FURB",
    "I",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PTH",
    "RET",
    "RUF",
    "SIM",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "ANN401",
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
pythonVersion = "3.14"
pythonPlatform = "Windows"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--basetemp=.pytest-tmp"
